--- a/Rose/Views/Shared/_Layout.cshtml
+++ b/Rose/Views/Shared/_Layout.cshtml
@@ -10,21 +10,8 @@
 <body>
     @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
     {
-        <li class="nav-item active">
-            <div class="dropdown show">
-                <a class="nav-link active dropdown-toggle" href="#"
-                   id="dropdownMenuLink"
-                   data-toggle="dropdown"
-                   aria-haspopup="true"
-                   aria-expanded="false">
-                    Offers
-                </a>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="/Offers/Index">All</a>
-                    <a class="dropdown-item" href="/Offers/Create">Add</a>
-                </div>
-            </div>
+        <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="AllClients">Clients</a>
         </li>
     }
 
