--- a/Rose/Views/Shared/_Layout.cshtml
+++ b/Rose/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flowers" asp-action="Index">Flowers</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Flower" asp-action="Index">Flowers</a>
                         </li>
 
 
