--- a/Rose/Views/Shared/_Layout.cshtml
+++ b/Rose/Views/Shared/_Layout.cshtml
@@ -29,35 +29,40 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Flower" asp-action="Index">Flowers</a>
                         </li>
-
-
-
-
-                    
-                        @*@if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
-                        {
-                            <li class="nav-item active">
-                                <div class="dropdown show">
-                                    <a class="nav-link active dropdown-toggle" href="#"
-                                       id="dropdownMenuLink"
-                                       data-toggle="dropdown"
-                                       aria-haspopup="true"
-                                       aria-expanded="false">
-                                        Flowers
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="dwopdownMenuLink">
-                                        <a class="dropdown-item" href="/Offers/Index">All</a>
-                                        <a class="dropdown-item" href="/Offers/Index">Add</a>
-                                    </div>
-                                </div>
-                            </li>
-                        }*@
-
-
                     </ul>
-                    
-                    <partial name="_LoginPartial" />
+
+
+                    @*@if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
+        {
+            <li class="nav-item active">
+                <div class="dropdown show">
+                    <a class="nav-link active dropdown-toggle" href="#"
+                       id="dropdownMenuLink"
+                       data-toggle="dropdown"
+                       aria-haspopup="true"
+                       aria-expanded="false">
+                        Flowers
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dwopdownMenuLink">
+                        <a class="dropdown-item" href="/Offers/Index">All</a>
+                        <a class="dropdown-item" href="/Offers/Index">Add</a>
+                    </div>
                 </div>
+            </li>
+        }*@
+
+                    @*@if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
+                    {
+                        <li class="nav-item active">
+                            <div class=""
+
+                        </li>
+                            }*@
+
+
+
+                            <partial name="_LoginPartial" />
+                    </div>
             </div>
         </nav>
     </header>
