--- a/Rose/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Rose/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LoginModel
 
-@{
+<!--@{
     ViewData["Title"] = "Log in";
 }
 
@@ -18,26 +18,12 @@
                     <input asp-for="Input.Username" class="form-control" />
                     <span asp-validation-for="Input.Username" class="text-danger"></span>
                 </div>
-                @*<div class="form-group">
-                    <label asp-for="Input.FirstName"></label>
-                    <input asp-for="Input.FirstName" class="form-control" />
-                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.LastName"></label>
-                    <input asp-for="Input.LastName" class="form-control" />
-                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.PhoneNumber"></label>
-                    <input asp-for="Input.PhoneNumber" class="form-control" />
-                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-                </div>*@
+                
                 <div class="form-group">
                     <label asp-for="Input.Password"></label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
+                </div>-->
                 @*<div class="form-group">
                     <div class="checkbox">
                         <label asp-for="Input.RememberMe">
@@ -46,7 +32,7 @@
                         </label>
                     </div>
                 </div>*@
-                <div class="form-group">
+                <!--<div class="form-group">
                     <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
                 <div class="form-group">
@@ -93,8 +79,52 @@
             }
         </section>
     </div>
-</div>
+</div>-->
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+    <section class="vh-100 gradient-custom">
+        <table style="background-color:lightpink">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                        <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                            <div class="card-body p-5 text-center">
+
+                                <div class="mb-md-5 mt-md-4 pb-5">
+
+                                    <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                                    <p class="text-white-50 mb-5">Please enter your login and password!</p>
+
+                                    <div class="form-outline form-white mb-4">
+                                        <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                                        <label class="form-label" for="typeEmailX">Username</label>
+                                    </div>
+
+                                    <div class="form-outline form-white mb-4">
+                                        <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                                        <label class="form-label" for="typePasswordX">Password</label>
+                                    </div>
+
+                                    <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+
+                                </div>
+
+                                <div>
+                                    <p class="mb-0">
+                                        Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </table>
+</section>
+    
+
+
+
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
