--- a/Rose/Views/Home/Index.cshtml
+++ b/Rose/Views/Home/Index.cshtml
@@ -3,32 +3,44 @@
 }
 
 @*<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>*@
-<div style="position: relative">
-    <img src="~/Images/flowerstore2.jpg" class="img-fluid rounded" 
-         width="2000px"
-         height="600px"
-         />
-    <div class="flowerstore2">
-        <h5 class="some-paragraph" style="color: white; margin-bottom: 15px">Welcome to out flowers store:</h5>
-        <a asp-controller="Flowers" class="some-paragraph btn btn-outline-light">Flowers</a>
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>*@
+
+@*<div style="position: relative">
+        <img src="~/Images/flowerstore2.jpg" class="img-fluid rounded"
+             width="2000px"
+             height="600px"
+             />
+        <div class="flowerstore2">
+            <h5 class="some-paragraph" style="color: white; margin-bottom: 15px">Welcome to out flowers store:</h5>
+            <a asp-controller="Flowers" class="some-paragraph btn btn-outline-light">Flowers</a>
+        </div>
+    </div>*@
+<div class="w3-content w3-display-container" style="max-width:2000px">
+    @*<a asp-controller="Products" asp-action="AllDiscounts" class="some-paragraph btn btn-outline-light">Promotions</a>*@
+    <a href="https://localhost:44337/Flower">
+        <img class="mySlides" w3-animate-fading" src="~/images/flowerstore4.jpg" style="width:100%" />
+    </a>
+    <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+        <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+        <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+        <span class="w3-badge  demo w3-border w3-section " onclick="currentDiv(1)"></span>
     </div>
 </div>
 
-<div class="text-center mt-3">
-    <h3>Our best sellers</h3>
+    <div class="text-center mt-3">
+        <h3>Our best sellers</h3>
 
-    <div class="col-3 d-inline-block">
-        <img src="~/Images/rosebouquet.jpg" width="200" height="200" class="img-fluid" />
-        <p class="font-weight-bolder">Pink Roses Bouquet</p>
-    </div>
-    <div class="col-3 d-inline-block">
-        <img src="~/Images/bouquetmix.jpg" width="200" height="200" class="img-fluid" />
-        <p class="font-weight-bolder">Bouquet Mix</p>
-    </div>
-    <div class="col-3 d-inline-block">
-        <img src="~/Images/redbouquet1.jpg" width="200" height="200" class="img-fluid" />
-        <p class="font-weight-bolder">Red Roses Bouquet</p>
-    </div>
+        <div class="col-3 d-inline-block">
+            <img src="~/Images/rosebouquet.jpg" width="200" height="200" class="img-fluid" />
+            <p class="font-weight-bolder">Pink Roses Bouquet</p>
+        </div>
+        <div class="col-3 d-inline-block">
+            <img src="~/Images/bouquetmix.jpg" width="180" height="180" class="img-fluid" />
+            <p class="font-weight-bolder">Bouquet Mix</p>
+        </div>
+        <div class="col-3 d-inline-block">
+            <img src="~/Images/redbouquet1.jpg" width="200" height="200" class="img-fluid" />
+            <p class="font-weight-bolder">Red Roses Bouquet</p>
+        </div>
