--- a/Rose/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Rose/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model LoginModel
 
-<!--@{
+@{
     ViewData["Title"] = "Log in";
 }
 
@@ -10,7 +10,6 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -18,39 +17,38 @@
                     <input asp-for="Input.Username" class="form-control" />
                     <span asp-validation-for="Input.Username" class="text-danger"></span>
                 </div>
-                
+
                 <div class="form-group">
                     <label asp-for="Input.Password"></label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>-->
-                @*<div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>*@
-                <!--<div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
+               
                 <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
+            <button type="submit" class="btn btn-primary">Log in</button>
+        </div>
+        <div class="form-group">
+            <p>
+                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+            </p>
+            <p>
+                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+            </p>
+            <p>
+                <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+            </p>
+        </div>
+                
+                        <div class="col-sm-6 px-0 d-none d-sm-block">
+                            <img src="https://i.etsystatic.com/23573055/r/il/92ac53/3233117448/il_fullxfull.3233117448_dxoy.jpg"
+                                 alt="Login image" class="w-100 vh-100" style="object-fit:cover; object-position: center;">
+                        </div>
+                    </form>
                 </div>
-            </form>
         </section>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+        @*<section>
             <h4>Use another service to log in.</h4>
             <hr />
             @{
@@ -77,11 +75,11 @@
                     </form>
                 }
             }
-        </section>
+        </section>*@
     </div>
-</div>-->
+</div>
 
-    <section class="vh-100 gradient-custom">
+    <!--<section class="vh-100 gradient-custom">
         <table style="background-color:lightpink">
             <div class="container py-5 h-100">
                 <div class="row d-flex justify-content-center align-items-center h-100">
@@ -102,10 +100,13 @@
                                     <div class="form-outline form-white mb-4">
                                         <input type="password" id="typePasswordX" class="form-control form-control-lg" />
                                         <label class="form-label" for="typePasswordX">Password</label>
-                                    </div>
+                                    </div>-->
 
-                                    <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-
+                                    @*<button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>*@
+                                    @*<div class="form-group">
+            <button type="submit" class="btn btn-primary">Log in</button>
+        </div>*@
+                                    <!--<button type="submit" class="btn btn-primary">Log in</button>
                                 </div>
 
                                 <div>
@@ -120,7 +121,7 @@
                 </div>
             </div>
         </table>
-</section>
+</section>-->
     
 
 
