--- a/Rose/Views/Order/AllOrders.cshtml
+++ b/Rose/Views/Order/AllOrders.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Rose.Entities.Flower>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "AllOrders";
 }
 
-<h1>Index</h1>
+<h1>All Orders</h1>
 
 @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
 {
@@ -59,24 +59,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Quantity)
                 </td>
-                <td>
-                    <a asp-action="Create" asp-controller="Order" asp-route-id="@item.Id">Order</a>
-
-                    @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
-                    {
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit |</a>
-                    }
-
-                    @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
-                    {
-                        <a asp-action="Details" asp-route-id="@item.Id">Details |</a>}
-                    @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
-                    {
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>}
-                </td>
+               
             </tr>
         }
     </tbody>
 
-    </tbody>
+    
 </table>
