--- a/Rose/Views/Home/Index.cshtml
+++ b/Rose/Views/Home/Index.cshtml
@@ -20,18 +20,17 @@
 <div class="w3-content w3-display-container" style="max-width:2000px">
     @*<a asp-controller="Products" asp-action="AllDiscounts" class="some-paragraph btn btn-outline-light">Promotions</a>*@
     <a href="https://localhost:44337/Flower">
-        <img class="mySlides" w3-animate-fading" src="~/images/flowerstore4.jpg" style="width:100%" />
+        <img class="mySlides" w3-animate-fading" src="~/images/flowerstore5.PNG" style="width:100%" />
     </a>
     <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-        <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-        <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+        @*<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+        <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>*@
         <span class="w3-badge  demo w3-border w3-section " onclick="currentDiv(1)"></span>
     </div>
 </div>
-
     <div class="text-center mt-3">
         <h3>Our best sellers</h3>
-
+      
         <div class="col-3 d-inline-block">
             <img src="~/Images/rosebouquet.jpg" width="200" height="200" class="img-fluid" />
             <p class="font-weight-bolder">Pink Roses Bouquet</p>
@@ -43,4 +42,5 @@
         <div class="col-3 d-inline-block">
             <img src="~/Images/redbouquet1.jpg" width="200" height="200" class="img-fluid" />
             <p class="font-weight-bolder">Red Roses Bouquet</p>
+        </div>
         </div>
