--- a/Rose/Views/Order/AllOrders.cshtml
+++ b/Rose/Views/Order/AllOrders.cshtml
@@ -17,27 +17,41 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.UserName)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FlowerName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.OrderDate)
+            </th>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FlowerName)
-                </td>
-               
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-               
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.FlowerName)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+
+            <td>
+                @Html.DisplayFor(modelItem => item.OrderDate)
+            </td>
+        </tr>
         }
     </tbody>
 
