--- a/Rose/Views/Flower/Bouquet.cshtml
+++ b/Rose/Views/Flower/Bouquet.cshtml
@@ -1,14 +1,31 @@
 ﻿@model IEnumerable<Rose.Entities.Flower>
 
-@{
-    ViewData["Title"] = "Bouquet";
-}
+@{ ViewData["Title"] = "Bouquet"; }
 
-<h1>Bouquet</h1>
+<header style="background-image: url('https://www.floristchan.com.au/inc/uploads/revslider/h2-slide-1.jpg') ">
+    <div style="height: 9.5rem"></div>
 
+    <div class="text-center my-5">
+
+
+        <h1 class="text-black">Rose</h1>
+        <h3 class="text-black">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blackColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+            </svg>Here are our Bouquets!<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="blackColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+            </svg>
+        </h3>
+
+    </div>
+</header>
+<h1>Bouquets</h1>
+
+@if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
+{
 <p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>}
 <table class="table">
     <thead>
         <tr>
@@ -34,7 +51,8 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -46,7 +64,8 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Picture)
+                <img src="@Html.DisplayFor(modelItem => item.Picture)" alt="Image" width="100px" />
+                @*@Html.DisplayFor(modelItem => item.Picture)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
@@ -55,11 +74,22 @@
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                <a asp-action="Create" asp-controller="Order" asp-route-id="@item.Id">Order</a>
             </td>
-        </tr>
+            @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
+            {
+        <td>
+
+            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+        </td>
 }
-    </tbody>
-</table>
+            @if (this.User.Identity.IsAuthenticated)
+            {
+            }
+        </tr>
+        }
+            </tbody>
+        </table>
