--- a/Rose/Views/Flower/Statistic.cshtml
+++ b/Rose/Views/Flower/Statistic.cshtml
@@ -3,8 +3,10 @@
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
+<header style="background-image: url('https://mybayutcdn.bayut.com/mybayut/wp-content/uploads/online-flowetr-delivery-services-in-Dubai.jpg') ">
+    <div style="height: 14.5rem"></div>
+</header>
+<h1>Statistic</h1>
 
 
 <table class="table">
