--- a/Rose/Views/Order/AllOrders.cshtml
+++ b/Rose/Views/Order/AllOrders.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "AllOrders";
 }
+<header style="background-image: url('https://ukopencollege.co.uk/wp-content/uploads/2019/03/Floristry.jpg') ">
+    <div style="height: 9.5rem"></div>
 
+    <div class="text-center my-5">
+        <h3 class="text-white">All Orders</h3>
+
+    </div>
+</header>
 <h1>All Orders</h1>
 
 @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
@@ -22,8 +29,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.FlowerName)
             </th>
+           
             <th>
                 @Html.DisplayNameFor(model => model.Quantity)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TotalPrice)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OrderDate)
@@ -43,9 +57,16 @@
             <td>
                 @Html.DisplayFor(modelItem => item.FlowerName)
             </td>
+          
 
             <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalPrice)
             </td>
 
             <td>
