--- a/Rose/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Rose/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,7 +6,6 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-
 <div class="row">
     <div class="col-md-4">
         <section>
@@ -24,27 +23,29 @@
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-
+               
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+            <button type="submit" class="btn btn-primary">Log in</button>
+        </div>
+        <div class="form-group">
+            <p>
+                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+            </p>
+            <p>
+                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+            </p>
+            <p>
+                <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+            </p>
+        </div>
+                
+        <header style="background-image: url('https://image.shutterstock.com/image-photo/woman-using-her-laptop-pink-260nw-1925781920.jpg') ">
+            <div style="height: 13.5rem"></div>
+        </header>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
-
-                </div>
-            </form>
-</div>
-</div>
-    
-
+        </section>
+    </div>
     <div class="col-md-6 col-md-offset-2">
         @*<section>
             <h4>Use another service to log in.</h4>
