--- a/Rose/Views/Flower/Statistic.cshtml
+++ b/Rose/Views/Flower/Statistic.cshtml
@@ -6,7 +6,7 @@
 <header style="background-image: url('https://mybayutcdn.bayut.com/mybayut/wp-content/uploads/online-flowetr-delivery-services-in-Dubai.jpg') ">
     <div style="height: 14.5rem"></div>
 </header>
-<h1>Statistic</h1>
+<h1>Index</h1>
 
 
 <table class="table">
@@ -24,7 +24,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.orderCount)
             </th>
-            
+            <th>
+                @Html.DisplayNameFor(model => model.totalPrice)
+            </th>
+
             <th></th>
         </tr>
     </thead>
@@ -44,7 +47,9 @@
                 <td>
                     @Model.orderCount
                 </td>
-                
+                <td>
+                    @Model.totalPrice
+                </td>
             </tr>
        
     </tbody>
