--- a/Rose/Views/Home/Index.cshtml
+++ b/Rose/Views/Home/Index.cshtml
@@ -28,19 +28,24 @@
         <span class="w3-badge  demo w3-border w3-section " onclick="currentDiv(1)"></span>
     </div>
 </div>
-    <div class="text-center mt-3">
-        <h3>Our best sellers</h3>
-      
+<div class="text-center mt-3">
+    <h3>Our best sellers</h3>
+    <a href="https://localhost:44337/Flower">
         <div class="col-3 d-inline-block">
-            <img src="~/Images/rosebouquet.jpg" width="200" height="200" class="img-fluid" />
-            <p class="font-weight-bolder">Pink Roses Bouquet</p>
+            <img src="~/Images/roses.jpg" width="200" height="200" class="img-fluid" />
+            <p class="font-weight-bolder">Roses Bouquet</p>
         </div>
+    </a>
+    <a href="https://localhost:44337/Flower">
         <div class="col-3 d-inline-block">
-            <img src="~/Images/bouquetmix.jpg" width="180" height="180" class="img-fluid" />
+            <img src="~/Images/mix.jpg" width="200" height="200" class="img-fluid" />
             <p class="font-weight-bolder">Bouquet Mix</p>
         </div>
+    </a>
+    <a href="https://localhost:44337/Flower">
         <div class="col-3 d-inline-block">
-            <img src="~/Images/redbouquet1.jpg" width="200" height="200" class="img-fluid" />
-            <p class="font-weight-bolder">Red Roses Bouquet</p>
+            <img src="~/Images/tulips.jpg" width="200" height="200" class="img-fluid" />
+            <p class="font-weight-bolder">Tulips Bouquet</p>
         </div>
-        </div>
+        </a>
+</div>
