--- a/Rose/Views/Order/Create.cshtml
+++ b/Rose/Views/Order/Create.cshtml
@@ -4,39 +4,36 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create order</h1>
+<h1>Create</h1>
 
+<h4>OrderCreateViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Order" asp-action="Create" method="post">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="FlowerId" class="control-label"></label>
-            <input asp-for="FlowerId" class="form-control" />
-            <span asp-validation-for="FlowerId" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Quantity" class="control-label"></label>
-            <input asp-for="Quantity" class="form-control" />
-            <span asp-validation-for="Quantity" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-outline-primary">Order</button>
-           
-
+            <div class="form-group">
+                <label asp-for="FlowerId" class="control-label"></label>
+                <input asp-for="FlowerId" class="form-control" />
+                <span asp-validation-for="FlowerId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Quantity" class="control-label"></label>
+                <input asp-for="Quantity" class="form-control" />
+                <span asp-validation-for="Quantity" class="text-danger"></span>
+            </div>
             @*<div class="form-group">
-            <label asp-for="UserId" class="control-label"></label>
-            <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-        </div>*@
+                <label asp-for="UserId" class="control-label"></label>
+                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+            </div>*@
             @*<div class="form-group">
-            <label asp-for="OrderDate" class="control-label"></label>
-            <input asp-for="OrderDate" class="form-control" />
-            <span asp-validation-for="OrderDate" class="text-danger"></span>
-        </div>*@
-            @*<div class="form-group">
-            <input type="submit" value="Create" class="btn btn-primary" />
-        </div>*@
-
+                <label asp-for="OrderDate" class="control-label"></label>
+                <input asp-for="OrderDate" class="form-control" />
+                <span asp-validation-for="OrderDate" class="text-danger"></span>
+            </div>*@
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
         </form>
     </div>
 </div>
