--- a/Rose/Views/Home/Index.cshtml
+++ b/Rose/Views/Home/Index.cshtml
@@ -30,22 +30,35 @@
 </div>
 <div class="text-center mt-3">
     <h3>Our best sellers</h3>
-    <a href="https://localhost:44337/Flower">
-        <div class="col-3 d-inline-block">
+   
+    <div class="col-3 d-inline-block">
+        <a href="https://localhost:44337/Flower">
             <img src="~/Images/roses.jpg" width="200" height="200" class="img-fluid" />
-            <p class="font-weight-bolder">Roses Bouquet</p>
-        </div>
-    </a>
-    <a href="https://localhost:44337/Flower">
-        <div class="col-3 d-inline-block">
-            <img src="~/Images/mix.jpg" width="200" height="200" class="img-fluid" />
-            <p class="font-weight-bolder">Bouquet Mix</p>
-        </div>
-    </a>
-    <a href="https://localhost:44337/Flower">
-        <div class="col-3 d-inline-block">
-            <img src="~/Images/tulips.jpg" width="200" height="200" class="img-fluid" />
-            <p class="font-weight-bolder">Tulips Bouquet</p>
-        </div>
         </a>
+            <p class="font-weight-bolder">Roses Bouquet</p>
+    </div>
+    
+    
+    <div class="col-3 d-inline-block">
+        <a href="https://localhost:44337/Flower">
+            <img src="~/Images/mix.jpg" width="200" height="200" class="img-fluid" />
+        </a>
+            <p class="font-weight-bolder">Bouquet Mix</p>
+    </div>
+    
+    
+    <div class="col-3 d-inline-block">
+        <a href="https://localhost:44337/Flower">
+            <img src="~/Images/tulips.jpg" width="200" height="200" class="img-fluid" />
+        </a>
+            <p class="font-weight-bolder">Tulips Bouquet</p>
+    </div>
+    @*<div class ="text-left">
+        <h2>Доставка на цветя от цветарски магазин "Rose"</h2>
+        <h4>
+            За да сте сигурни, че ще получите най-красите цветя за съответния повод, разгледайте нашите
+            предложения. Ние ще ви ги доставим в кратки срокове и в отлично състояние.
+        </h4>
+    </div>*@
+        
 </div>
